U generate jre with jlink